Fix hover styles by changing .md-typeset a:hover to .md-typeset a:visited

--- a/docs/stylesheets/contentdesk.css
+++ b/docs/stylesheets/contentdesk.css
@@ -33,7 +33,7 @@
   text-decoration: underline;
 }
 
-.md-typeset a:hover {
+.md-typeset a:visited {
   color: rgb(15, 15, 15);
   text-decoration: none;
 }
