Add button styles for improved UI consistency

--- a/docs/stylesheets/contentdesk.css
+++ b/docs/stylesheets/contentdesk.css
@@ -37,3 +37,14 @@
   color: rgb(15, 15, 15);
   text-decoration: none;
 }
+
+.md-button {
+  background-color: #46c882;
+  --bs-btn-bg: #46c882;
+  color: #ffffff;
+  --bs-btn-active-bg: #0F0F0F;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background-size 0.15s ease-in-out !important;
+  background-image: url(https://st.gallen-bodensee.ch/files/_OpenFrontend/_config/design_SGBT/img/btn-bg-black.svg);
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+}
