Enhance styling for links and buttons in contentdesk.css
- Added underline styling for links within .md-typeset.
- Updated button styles to ensure consistent appearance and hover effects.
- Introduced new button properties for .md-button within .md-typeset, including padding, border-radius, and focus-visible styles.
- Removed unused app.css from extra_css in mkdocs.yml to streamline CSS loading.

--- a/docs/stylesheets/contentdesk.css
+++ b/docs/stylesheets/contentdesk.css
@@ -23,6 +23,11 @@
   background-color: #0f0f0f;
 }
 
+.md-typeset a {
+  color: rgb(15, 15, 15);
+  text-decoration: underline;
+}
+
 .md-typeset a:hover {
   color: rgb(15, 15, 15);
   text-decoration: none;
@@ -38,13 +43,41 @@
   text-decoration: none;
 }
 
-.md-button {
+.md-typeset .md-button {
+  color: black;
   background-color: #46c882;
   --bs-btn-bg: #46c882;
-  color: #ffffff;
   --bs-btn-active-bg: #0F0F0F;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, background-size 0.15s ease-in-out !important;
   background-image: url(https://st.gallen-bodensee.ch/files/_OpenFrontend/_config/design_SGBT/img/btn-bg-black.svg);
   background-size: 0 100%;
   background-repeat: no-repeat;
+}
+
+.md-typeset .md-button:hover {
+  background-color: #46c882;
+  --bs-btn-bg: #46c882;
+  background-size:100% 100%
+}
+
+.md-typeset a.md-button {
+  color: black;
+  background-color: #46c882;
+  --bs-btn-bg: #46c882;
+}
+
+.md-typeset a.md-button {
+  display:inline-flex;
+  align-items:center;
+  flex-wrap:nowrap;
+  line-height:normal;
+  border-radius:50px;
+  padding:16px 40px 16px 40px;
+  border:none
+}
+
+.md-button .md-button:focus-visible{
+  outline:none;
+  border:none;
+  box-shadow:none
 }
